Argument validation: NULL + ge constraints on sequence
- SequenceFunction.onBind validates batch_size/increment >= 1 (rejects 0/neg)
- ArgumentsParser keeps null entries (List.copyOf was rejecting them)
- NULL-arg checks for count/batch_size/increment with structured error messages

Unblocks arg_validation.test (14 assertions).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>